# squash

./: .gitignore  README.md  SQUASH_PLAN.md  docker-compose.yml  elo.py  main.py  main.py.bak  main_fixed.py  models.py  package-lock.json  pyproject.toml
.gemini/: settings.json
scripts/: drop_db.py  seed_dev.py
src/squash/: auth.py  database.py  main.py  models.py
templates/: base.html  create_session_modal.html  index.html  log_match_modal.html  login.html  match.html  match_success.html  matches.html  profile.html  profile_snippet.html  profiles.html  register.html  session_detail.html  sessions.html
tests/: test_integration.py  test_matches.py  test_modal_logic.py  test_navigation.py  test_profiles.py  test_robustness.py  test_session_create.py  test_ui_rendering.py
